# drawdata

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  bar-demo.py  conductor.json  demo.py  package.json  pyproject.toml  readme.md  scatter-demo-no-altair.py  scatter-demo.py  setup.py  tailwind.config.js  widget.js
.github/workflows/: ci.yml  js-build.yml
docs/: index.html
docs/assets/: CellStatus-CJiCB3Hi.js  CellStatus-D1YyNsC9.js  Combination-D1TsGrBC.js  ConnectedDataExplorerComponent-B4fGzEJZ.js  ConnectedDataExplorerComponent-FS-m-lCY.js  ConnectedDataExplorerComponent-KZlvSITY.js  DeferredRequestRegistry-B3BENoUa.js  DeferredRequestRegistry-RuL7NV1n.js  ErrorBoundary-Bo313Z9X.js  ErrorBoundary-C7JBxSzd.js  ImageComparisonComponent-BHNx9yIG.js  ImageComparisonComponent-DiKQQS5x.js  ImperativeModal-B62Q6S9l.js  ImperativeModal-BZvZlZQZ.js  Inputs-BLUpxKII.js  Inputs-C4Oo7q-H.css  Inputs-SmI80aJQ.js  JsonOutput-BQtz7-np.css  JsonOutput-Cqq7S3wn.js  JsonOutput-DlwRx3jE.js  LazyAnyLanguageCodeMirror-BSGwa0jm.js  LazyAnyLanguageCodeMirror-Dr2G5gxJ.js  MarimoErrorOutput-DAK6volb.js  MarimoErrorOutput-t_4q7nKD.js  RSPContexts-VzcTZjG1.js  RenderHTML-B4Nb8r0D.js  RenderHTML-DZz6EFTa.js  RunButton-rOSamvRh.js  SSRProvider-DD7JA3RM.js  SelectionIndicator-BtLUNjRz.js  VegaLite-D07JSyC_.js  VisuallyHidden-B0mBEsSm.js  __vite-browser-external-BkzFKOxE.js  __vite-browser-external-CPyDqUtZ.js  (+977 more)
drawdata/: __init__.py
js/: bar_widget.js  bar_widget.jsx  scatter_widget.js  scatter_widget.jsx  styles.css
tests/: test_bar_widget_scoping.py  test_scatter_widget_init_order.py
(+5 files in other folders)
