[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drawdata"
version = "0.4.0"
description = "draw a dataset from inside Jupyter"
readme = "readme.md"
license = {text = "MIT"}
authors = [
    {name = "Vincent D. Warmerdam"}
]
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "anywidget>=0.9.2",
    "pandas>=2.3.3",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

[tool.setuptools.packages.find]
exclude = ["notebooks"]

[tool.setuptools.package-data]
drawdata = ["static/*.js", "static/*.css"]
